Set a 5 minute timeout for pyo3 pytests on CI (#3101)
Successful runs take under 2 minutes.
This will prevent CI from hanging if there are any remaining deadlocks in the Python code

--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -198,6 +198,7 @@ jobs:
 
       - name: "Python: OpenAI Client: pytest"
         working-directory: clients/openai-python
+        timeout-minutes: 5
         run: |
           uv run pytest --verbose
 
