--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -107,7 +107,7 @@ jobs:
 
       - name: Upload new model inference cache
         if: inputs.regen_cache == true
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
         with:
           name: model-inference-cache
           path: |
@@ -170,8 +170,18 @@ jobs:
         if: always()
         run: docker exec fixtures-clickhouse-1 cat /var/log/clickhouse-server/clickhouse-server.log
 
-      - name: Upload Playwright artifacts
-        if: failure()
+      - name: Upload Playwright artifacts (GitHub runner)
+        if: failure() && inputs.regen_cache == false
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        with:
+          name: playwright-report
+          path: |
+            ui/playwright-report/
+            ui/test-results/
+          retention-days: 7
+
+      - name: Upload Playwright artifacts (Namespace runner)
+        if: failure() && inputs.regen_cache == true
         uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
         with:
           name: playwright-report
