--- a/internal/tensorzero-node/Cargo.toml
+++ b/internal/tensorzero-node/Cargo.toml
@@ -15,6 +15,7 @@ napi = { version = "2.12.2", default-features = false, features = [
     "tokio_rt",
 ] }
 napi-derive = "2.12.2"
+serde.workspace = true
 serde_json.workspace = true
 url.workspace = true
 tensorzero = { path = "../../clients/rust" }
