Helm: Enable setting global labels for all created resources
This can be valuable for teams that use labels to loosely denote ownership of
K8s resources deployed to a shared cluster.

--- a/examples/production-deployment-k8s-helm/templates/configmap.yaml
+++ b/examples/production-deployment-k8s-helm/templates/configmap.yaml
@@ -4,7 +4,10 @@ metadata:
   name: {{ include "tensorzero.fullname" . }}
   labels:
     {{- include "tensorzero.labels" . | nindent 4 }}
+    {{- with .Values.globalLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 data:
   {{- range $key, $value := .Values.configMap.data }}
   {{ $key }}: {{ $value | quote }}
-  {{- end }} 
+  {{- end }}
