--- a/examples/production-deployment-k8s-helm/templates/pvc.yaml
+++ b/examples/production-deployment-k8s-helm/templates/pvc.yaml
@@ -6,6 +6,9 @@ metadata:
   labels:
     {{- include "tensorzero.labels" . | nindent 4 }}
     app.kubernetes.io/component: storage
+    {{- with .Values.globalLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   accessModes:
     {{- range .Values.persistence.accessModes }}
