--- a/examples/production-deployment-k8s-helm/values.yaml
+++ b/examples/production-deployment-k8s-helm/values.yaml
@@ -120,8 +120,9 @@ persistence:
   storageClass: ""
   mountPath: /app/storage
 
-globalLabels: {}
-# my.domain/owner: my-team
+globalLabels:
+  # {}
+  my.domain/owner: my-team
 
 # TensorZero Configuration
 configMap:
