--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -102,14 +102,40 @@ jobs:
           echo "ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}" >> fixtures/.env-gateway
           echo "S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }}" >> fixtures/.env-gateway
           echo "S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }}" >> fixtures/.env-gateway
+          # Save the old cache file for comparison
+          cp ./fixtures/model_inference_cache_e2e.jsonl ./fixtures/model_inference_cache_e2e.jsonl.old
           ./fixtures/regenerate-model-inference-cache.sh
+          # Check that the old and new cache files have the same number of rows
+          OLD_ROWS=$(wc -l < ./fixtures/model_inference_cache_e2e.jsonl.old)
+          NEW_ROWS=$(wc -l < ./fixtures/model_inference_cache_e2e.jsonl)
+          echo "Old cache file has $OLD_ROWS rows, new cache file has $NEW_ROWS rows"
+          if [ "$OLD_ROWS" != "$NEW_ROWS" ]; then
+            echo "ERROR: Row count mismatch between old and new cache files"
+            echo "Old rows:"
+            echo "$OLD_ROWS"
+            echo "New rows:"
+            echo "$NEW_ROWS"
+            exit 1
+          fi
+          # Check that long_cache_key entries match between old and new files
+          OLD_KEYS=$(jq -r '.long_cache_key' ./fixtures/model_inference_cache_e2e.jsonl.old | sort)
+          NEW_KEYS=$(jq -r '.long_cache_key' ./fixtures/model_inference_cache_e2e.jsonl | sort)
+          if [ "$OLD_KEYS" != "$NEW_KEYS" ]; then
+            echo "ERROR: long_cache_key entries do not match between old and new cache files"
+            echo "Old keys:"
+            echo "$OLD_KEYS"
+            echo "New keys:"
+            echo "$NEW_KEYS"
+            exit 1
+          fi
+          echo "Cache file validation passed: same number of rows and matching long_cache_key entries"
           # Take down and destroy the containers, so that our subsequent test run starts with a fresh ClickHouse
           # server, and inserts our regenerated fixtures from scratch
           docker compose -f ./fixtures/docker-compose.e2e.yml -f ./fixtures/docker-compose.ui.yml down
           docker compose -f ./fixtures/docker-compose.e2e.yml -f ./fixtures/docker-compose.ui.yml rm -f
 
       - name: Upload new model inference cache
-        if: inputs.regen_cache == true
+        if: always() && inputs.regen_cache == true
         uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
         with:
           name: model-inference-cache
