--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -57,6 +57,13 @@ e2e_aws_sagemaker_tgi = { max-threads = 1 }
 e2e_aws_sagemaker_openai = { max-threads = 2 }
 e2e_groq = { max-threads = 1 }
 
+# Require that nothing else runs at the same time as a Jaeger test,
+# so that so we can find our Jaeger traces (without other tests
+# flushing our target spans out of the Jaeger buffer).
+[[profile.default.overrides]]
+filter = 'test(test_jaeger)'
+threads-required = 'num-test-threads'
+
 [[profile.default.overrides]]
 filter = 'binary(e2e) and test(providers::aws_bedrock::)'
 test-group = 'e2e_aws_bedrock'
