--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -187,6 +187,10 @@ jobs:
 
       - name: "Python: PyO3 Client: pytest"
         working-directory: clients/python
+        # We skip Python tests with a batch-writes config for now, since
+        # we don't allow embedded clients to have batch writes until we fix
+        # the deadlocks.
+        if: matrix.batch_writes == false
         run: |
           bash ./test.sh --verbose
 
