--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -52,6 +52,11 @@ jobs:
           docker load < gateway-container.tar
           docker load < ui-container.tar
 
+      - name: Create the `object_storage` directory for the multimodal-vision-finetuning example
+        run: |
+          mkdir -p examples/multimodal-vision-finetuning/object_storage
+          chmod 777 examples/multimodal-vision-finetuning/object_storage
+
       - name: Check latest docker-compose
         run: ./ci/check-all-docker-compose.sh
 
@@ -81,6 +86,11 @@ jobs:
       - name: Configure Namespace-powered Buildx
         uses: namespacelabs/nscloud-setup-buildx-action@84ca8c58fdf372d6a4750476cd09b7b96ee778ca
         continue-on-error: ${{ github.event.pull_request.head.repo.full_name != github.repository || github.actor == 'dependabot[bot]' }}
+
+      - name: Create the `object_storage` directory for the multimodal-vision-finetuning example
+        run: |
+          mkdir -p examples/multimodal-vision-finetuning/object_storage
+          chmod 777 examples/multimodal-vision-finetuning/object_storage
 
       - name: Check all docker-compose.yml files
         run: ./ci/check-all-docker-compose.sh
