Run more ui test jobs on standard Github runners (#3127)
* Run more ui test jobs on standard Github runners

* Fix checkout action

* Cleanup disk space

* Another disk space cleanup

* Move cleanup earlier

* Another reorder

* Increase timeouts

* Bump another timeout

* Run format

* fixed another playwirght race condition

* fixed upload step

---------

Co-authored-by: Viraj Mehta <viraj@tensorzero.com>

--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   ui-tests:
-    runs-on: namespace-profile-tensorzero-8x16
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -15,7 +15,10 @@ jobs:
       - name: Set DNS
         run: echo "127.0.0.1 howdy.tensorzero.com" | sudo tee -a /etc/hosts
 
-      - uses: namespacelabs/nscloud-checkout-action@953fed31a6113cc2347ca69c9d823743c65bc84b
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Cleanup disk space
+        run: ./ci/free-disk-space.sh
 
       - uses: dtolnay/rust-toolchain@stable
 
@@ -30,18 +33,12 @@ jobs:
       - name: Install `pnpm` dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Setup the Namespace cache for `s3-fixtures`
-        uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
-        with:
-          path: |
-            ./ui/fixtures/s3-fixtures
-
       - name: Build `tensorzero-node`
         working-directory: internal/tensorzero-node
         run: pnpm build
 
       - name: Download `gateway` container
-        uses: namespace-actions/download-artifact@5c070f7d7ebdc47682b04aa736c76e46ff5f6e1e
+        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
         with:
           name: build-gateway-container
           path: .
