--- a/evaluations/Cargo.toml
+++ b/evaluations/Cargo.toml
@@ -23,6 +23,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 uuid = { workspace = true }
 futures = { workspace = true }
+regex = "1.10.0"
 indicatif = "0.18.0"
 
 [dev-dependencies]
