Make 'optimization_tests' feature enable 'e2e_tests' feature
This slightly simpifies our code, and may reduce the number of
permutations that 'cargo hack' needs to test

--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -10,7 +10,7 @@ license.workspace = true
 # Forward this feature to the Rust client, so that the embedded gateway
 # has the `e2e_tests` feature enabled when we run our e2e tests
 e2e_tests = ["tensorzero/e2e_tests"]
-optimization_tests = []
+optimization_tests = ["e2e_tests"]
 pyo3 = ["dep:pyo3"]
 
 [[test]]
