--- a/examples/guides/multimodal-inference/pyproject.toml
+++ b/examples/guides/multimodal-inference/pyproject.toml
@@ -2,8 +2,5 @@
 name = "tensorzero-examples-guides-multimodal-inference"
 version = "0.0.0"
 readme = "README.md"
-requires-python = ">=3.9"
-dependencies = [
-    "openai",
-    "tensorzero",
-]
+requires-python = ">=3.10"
+dependencies = ["openai", "tensorzero"]
