Pin rust:1.88.0 in our Dockerfiles
The newest 'rust:latest' image is causing our builds to fail with
strange glibc errors:
"/lib/x86_64-linux-gnu/libc.so.6: version `GLIBC_2.38' not found (required by gateway)"
https://github.com/tensorzero/tensorzero/actions/runs/17078362823/job/48425591669

Let's pin the previous version for now

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -51,7 +51,7 @@ RUN pnpm install --frozen-lockfile --prod
 
 # ========== tensorzero-node-build-env ==========
 
-FROM rust:latest AS tensorzero-node-build-env
+FROM rust:1.88.0 AS tensorzero-node-build-env
 
 RUN apt-get update && apt-get install -y nodejs npm && rm -rf /var/lib/apt/lists/*
 RUN npm install -g pnpm
