feat: Convert recipes directory to uv workspace
- Convert recipes directory to use uv workspace structure
- Centralize dependency management in root pyproject.toml
- Use consistent tensorzero client version (2025.8.3) across all recipes
- Remove individual requirements.txt and uv.lock files
- Add build-system configuration to all recipe packages
- Update workspace members to include all recipe directories

This change improves dependency management by:
- Ensuring all recipes use the same tensorzero version
- Centralizing dependency resolution
- Reducing duplication of lock files and requirements
- Making it easier to update dependencies across all recipes

Closes #3039

--- a/recipes/dicl/pyproject.toml
+++ b/recipes/dicl/pyproject.toml
@@ -5,10 +5,14 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "clickhouse-connect",
-    "ipykernel",
+    "ipykernel", 
     "openai",
     "pandas",
     "tensorzero",
     "toml",
     "tqdm",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
