--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -130,6 +130,7 @@ enum-map = "2.7.3"
 tokio-util = "0.7.15"
 tempfile = "3.20.0"
 ts-rs = { workspace = true }
+toml_edit = "0.23.3"
 
 
 [dev-dependencies]
