--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -4,6 +4,7 @@ run-name: Merge Queue Checks for ${{ github.ref }}
 on:
   workflow_dispatch:
   merge_group:
+  push:
   schedule:
     - cron: "0 0 * * *" # Runs at 00:00 UTC every day
 
@@ -197,7 +198,7 @@ jobs:
           bash ./test.sh --verbose &
           TEST_PID=$!
           echo "Started test.sh with PID: $TEST_PID"
-          
+
           # Wait for 5 minutes (300 seconds)
           for i in {1..300}; do
             if ! kill -0 $TEST_PID 2>/dev/null; then
@@ -207,13 +208,13 @@ jobs:
             fi
             sleep 1
           done
-          
+
           echo "Test has been running for 5 minutes, capturing backtraces..."
-          
+
           # Get all processes related to our test
           echo "=== Process tree ==="
           ps -ef | grep -E "(test\.sh|pytest|python)" | grep -v grep || true
-          
+
           echo "=== Capturing backtraces with gdb ==="
           # Find all python processes that might be related to our test
           PYTHON_PIDS=$(pgrep -f "python.*pytest" || true)
