Set 'temperature = 0' for extract_entities e2e test variants
We had a model inference cache regen failure due to OpenAI and
Anthropic generating different NER output (which caused the judge
requests to be different, leading to a cache miss) instead of exactly
the same output.

Setting temperature=0 should make the test more consistent

--- a/ui/fixtures/config/tensorzero.e2e.toml
+++ b/ui/fixtures/config/tensorzero.e2e.toml
@@ -57,22 +57,26 @@ description = "Extract named entities from text"
 type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
+temperature = 0
 
 [functions.extract_entities.variants.gpt4o_initial_prompt]
 type = "chat_completion"
 model = "openai::gpt-4o"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
+temperature = 0
 
 [functions.extract_entities.variants.llama_8b_initial_prompt]
 type = "chat_completion"
 model = "llama-3.1-8b-instruct"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
+temperature = 0
 
 [functions.extract_entities.variants.baseline]
 type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/baseline/system_template.minijinja"
 json_mode = "strict"
+temperature = 0
 
 [functions.extract_entities.variants.dicl]
 type = "experimental_dynamic_in_context_learning"
@@ -87,6 +91,7 @@ weight = 1
 type = "chat_completion"
 model = "ft:gpt-4o-mini-2024-07-18:tensorzero::ALHEaw1j"
 system_template = "functions/extract_entities/baseline/system_template.minijinja"
+temperature = 0
 
 [functions.write_haiku]
 type = "chat"
