--- a/ui/fixtures/config/tensorzero.toml
+++ b/ui/fixtures/config/tensorzero.toml
@@ -66,24 +66,28 @@ type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
 json_mode = "strict"
+temperature = 0
 
 [functions.extract_entities.variants.gpt4o_initial_prompt]
 type = "chat_completion"
 model = "openai::gpt-4o"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
 json_mode = "strict"
+temperature = 0
 
 [functions.extract_entities.variants.llama_8b_initial_prompt]
 type = "chat_completion"
 model = "llama-3.1-8b-instruct"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
 json_mode = "strict"
+temperature = 0
 
 [functions.extract_entities.variants.baseline]
 type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/baseline/system_template.minijinja"
 json_mode = "strict"
+temperature = 0
 
 [functions.extract_entities.variants.dicl]
 type = "experimental_dynamic_in_context_learning"
@@ -99,6 +103,7 @@ type = "chat_completion"
 model = "ft:gpt-4o-mini-2024-07-18:tensorzero::ALHEaw1j"
 system_template = "functions/extract_entities/baseline/system_template.minijinja"
 json_mode = "strict"
+temperature = 0
 
 [functions.write_haiku]
 type = "chat"
