--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -53,8 +53,7 @@ jobs:
     uses: ./.github/workflows/batch-test.yml
     secrets: inherit
   live-tests:
-    # runs-on: namespace-profile-tensorzero-8x16
-    runs-on: ubuntu-latest
+    runs-on: namespace-profile-tensorzero-8x16
     permissions:
       # Permission to checkout the repository
       contents: read
@@ -109,13 +108,13 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda
 
-      # - name: Configure Namespace cache for Rust, Python (uv), and pnpm
-      #   uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
-      #   with:
-      #     cache: |
-      #       pnpm
-      #       rust
-      #       uv
+      - name: Configure Namespace cache for Rust, Python (uv), and pnpm
+        uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
+        with:
+          cache: |
+            pnpm
+            rust
+            uv
 
       - name: Install JS dependencies
         run: pnpm install --frozen-lockfile
@@ -159,7 +158,7 @@ jobs:
       - name: Launch ClickHouse container for E2E tests
         run: |
           # 'docker compose' will exit with status code 1 if any container exits, even if the container exits with status code 0
-          docker compose -f tensorzero-core/tests/e2e/docker-compose.yml up -d --wait || true
+          docker compose -f tensorzero-core/tests/e2e/docker-compose.yml up --build -d --wait || true
 
       - name: Print ClickHouse container logs
         if: always()
