--- a/tensorzero-core/tests/mock-inference-provider/Cargo.toml
+++ b/tensorzero-core/tests/mock-inference-provider/Cargo.toml
@@ -23,6 +23,7 @@ tracing-subscriber = { workspace = true }
 tracing = { workspace = true }
 tower-http = { workspace = true }
 anyhow.workspace = true
+uuid = { workspace = true }
 
 [dev-dependencies]
 eventsource-stream = "0.2.3"
