Use 'sharing=locked' for gateway Dockerfile cache mount
Using a shared cache volume is causing issues on Namespace with
parallel builds:

```
3.749   failed to open `/usr/local/cargo/registry/src/index.crates.io-1949cf8c6b5b557f/minimal-lexical-0.2.1/.cargo-ok`
 3.749 Caused by:
3.749   File exists (os error 17)
```

Let's only allow one Docker builder to have access to the registry cache
mount

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -11,8 +11,8 @@ RUN git rev-parse HEAD
 
 ARG CARGO_BUILD_FLAGS=""
 
-RUN --mount=type=cache,id=tensorzero-gateway-release,sharing=shared,target=/usr/local/cargo/registry \
-    --mount=type=cache,id=tensorzero-gateway-release,sharing=shared,target=/usr/local/cargo/git \
+RUN --mount=type=cache,id=tensorzero-gateway-release,sharing=locked,target=/usr/local/cargo/registry \
+    --mount=type=cache,id=tensorzero-gateway-release,sharing=locked,target=/usr/local/cargo/git \
     cargo build --profile performance -p gateway $CARGO_BUILD_FLAGS && \
     cp -r /src/target/performance /release
 
