--- a/ci/buildkite/buildkite-exploration.yml
+++ b/ci/buildkite/buildkite-exploration.yml
@@ -3,7 +3,12 @@ steps:
     command:
       # Install cargo-binstall
       - "curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash"
+      # Install uv
+      - "curl -LsSf https://astral.sh/uv/install.sh | sh"
+      # Install Python
+      - "uv python install"
       # Install cargo-nextest
+      # TODO: install the pre-built package instead of building from source
       - "cargo binstall -y cargo-nextest --secure"
       # Run unit tests using cargo-nextest
       - "cargo test-unit"
