--- a/ci/buildkite/buildkite-exploration.yml
+++ b/ci/buildkite/buildkite-exploration.yml
@@ -3,6 +3,7 @@ steps:
     command:
       # Install cargo-binstall
       - "curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash"
+      - "echo $PATH"
       # Install uv
       # - "curl -LsSf https://astral.sh/uv/install.sh | sh"
       # - "export PATH=$PATH:$HOME/.local/bin"
