--- a/ci/buildkite/buildkite-exploration.yml
+++ b/ci/buildkite/buildkite-exploration.yml
@@ -1,21 +1,6 @@
 steps:
   - label: ":rust: Rust Unit Tests"
-    command:
-      # Install cargo-binstall
-      - "curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash"
-      # Install uv
-      - "echo $PATH"
-      - "curl -LsSf https://astral.sh/uv/0.6.17/install.sh | sh"
-      - "echo $PATH"
-      - "export PATH=$PATH:$HOME/.local/bin"
-      - "echo $PATH"
-      # Install Python
-      - "uv python install"
-      # Install cargo-nextest
-      # TODO: install the pre-built package instead of building from source
-      - "cargo binstall -y cargo-nextest --secure"
-      # Run unit tests using cargo-nextest
-      - "cargo test-unit"
+    command: bash ./ci/buildkite/buildkite-exploration.sh
     plugins:
       - docker:
           image: "rust"
