--- a/ui/package.json
+++ b/ui/package.json
@@ -86,6 +86,7 @@
     "@types/react-dom": "^19.1.6",
     "@vitest/browser": "3.1.4",
     "@vitest/coverage-v8": "3.1.4",
+    "buildkite-test-collector": "^1.9.1",
     "eslint": "^9.30.1",
     "eslint-plugin-storybook": "^9.0.16",
     "playwright": "^1.53.2",
