--- a/ci/buildkite/buildkite-exploration.yml
+++ b/ci/buildkite/buildkite-exploration.yml
@@ -4,3 +4,6 @@ steps:
     plugins:
       - docker:
           image: "rust"
+      - test-collector#v1.0.0:
+          files: "../../target/nextest/ci-unit/junit.xml"
+          format: "junit"
