--- a/ci/buildkite/buildkite-exploration.yml
+++ b/ci/buildkite/buildkite-exploration.yml
@@ -4,6 +4,7 @@ steps:
     plugins:
       - docker:
           image: "rust"
+          mount-buildkite-agent: true
       - test-collector#v1.0.0:
           files: "target/nextest/ci-unit/junit.xml"
           format: "junit"
