--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -1,7 +1,7 @@
 steps:
   - label: "Build Gateway Container"
     command: bash ./ci/buildkite/build-gateway-container.sh
-    artifact-paths:
+    artifact_paths:
       - gateway-container.tar
 
   - label: ":rust: Rust Unit Tests"
