--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -20,5 +20,5 @@ steps:
 
   - label: ":node: Node.js Tests"
     # command: bash ./ci/buildkite/node-unit-tests.sh
-    command: sleep infinity
+    command: bash ./ci/buildkite/node-unit-tests.sh || sleep infinity
     depends_on: "build-gateway-container"
