added tensorzero-node tests with tracking

--- a/internal/tensorzero-node/package.json
+++ b/internal/tensorzero-node/package.json
@@ -56,5 +56,8 @@
     "lint:check": "eslint . --max-warnings=0 --config eslint.config.js --cache --ignore-pattern \"dist/\" --ignore-pattern \"index.d.ts\"",
     "universal": "napi universal",
     "version": "napi version"
+  },
+  "dependencies": {
+    "buildkite-test-collector": "^1.9.1"
   }
 }
