--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ui:test": "pnpm --filter=tensorzero-ui test",
     "ui:test:e2e": "pnpm --filter=tensorzero-ui test-e2e",
     "ui:test:e2e-base-path": "pnpm --filter=tensorzero-ui test-e2e-base-path",
+    "tensorzero-node:test": "cd internal/tensorzero-node && pnpm test",
     "clean:node": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +"
   },
   "devDependencies": {
