Skip CI tests for docs-only PRs

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -3,6 +3,8 @@ run-name: "General Checks for: ${{ github.event.pull_request.title || github.ref
 
 on:
   merge_group:
+    paths-ignore:
+      - "docs/**"
   pull_request:
     branches: ["main"]
 
