--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -3,6 +3,8 @@ name: Dummy
 on:
   pull_request:
     branches: ["main"]
+    paths-ignore:
+      - "docs/**"
 
 jobs:
   # See 'ci/README.md' at the repository root for more details.
